openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: storage-dashboard
  labels:
    app: storage-dashboard
    component: web
spec:
  to:
    kind: Service
    name: storage-dashboard
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
